--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nuknov - Red Team Security Tools</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%23000000'/%3E%3Ctext x='50' y='75' font-family='Orbitron, monospace' font-size='70' font-weight='900' fill='%2300ff41' text-anchor='middle'%3EN%3C/text%3E%3C/svg%3E">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Background Elements -->
