--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         <div class="hero-content">
             <h1>OFFENSIVE SECURITY TOOLS</h1>
             <p class="subtitle">Red Team Utilities & Penetration Testing</p>
-            <div class="terminal-text">&gt; Welcome!, Nuknov, Just a tech, You are in a secure cyber space.</div>
+            <div class="terminal-text">&gt; Welcome!, Nuknov, Just a tech., You are in a secure cyber space., We do not forgive., We do not forget., Expect us.</div>
             <div class="cta-buttons">
                 <a href="https://github.com/Nuknov" class="btn btn-primary">View Tools</a>
                 <a href="#features" class="btn btn-secondary">Explore Arsenal</a>
@@ -569,8 +569,11 @@
         const messages = [
             'Welcome!',
             'Nuknov',
-            'Just a tech',
-            'You are in a secure cyber space.'
+            'Just a tech.',
+            'You are in a secure cyber space.',
+            'We do not forgive.',
+            'We do not forget.', 
+            'Expect us.'
         ];
         
         let currentMessageIndex = 0;
